--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,15 @@ jobs:
       - name: Test example
         run : |
           set -eE -o functrace
+
+          failure() {
+            local lineno=$1
+            local msg=$2
+            echo "Failed at $lineno: $msg"
+          }
+          trap 'failure ${LINENO} "$BASH_COMMAND"' ERR
+
+          
           TEST=$(extism call zig-out/bin/basic-example.wasm --input "this is a test" --set-config='{"thing": "1", "a": "b"}' --log-level=debug count_vowels | jq)
           echo $TEST | grep '"count": 4'
           echo $TEST | grep '"config": "1"'
