--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ jobs:
             local msg=$2
             echo "Failed at $lineno: $msg"
           }
-          trap 'failure ${LINENO} "$BASH_COMMAND"' ERR
+          trap 'failure ${LINENO} "$BASH_COMMAND" "$TEST"' ERR
 
           
           TEST=$(extism call zig-out/bin/basic-example.wasm --input "this is a test" --set-config='{"thing": "1", "a": "b"}' --log-level=debug count_vowels | jq)
