--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,10 +17,15 @@ jobs:
       # - uses: ./.github/actions/libextism
       - name: Install Extism CLI
         shell: sh
-        run: sudo curl -s https://get.extism.org/cli | sh -s -- -q -y
+        run: sudo curl -s https://get.extism.org/cli | sh -s -- -y
       
       - name: Check Extism version
-        run: extism --version
+        run: |
+          VERSION_OUTPUT=$(extism --version)
+          if [ -z "$VERSION_OUTPUT" ]; then
+              echo "extism --version produced empty output"
+              exit 1
+          fi
 
       - name: Install Zig
         uses: mlugg/setup-zig@v2
@@ -34,8 +39,8 @@ jobs:
         run: |
           zig build basic_example
           
-      - name: Setup tmate session
-        uses: mxschmitt/action-tmate@v3
+      # - name: Setup tmate session
+      #   uses: mxschmitt/action-tmate@v3
 
       - name: Test example
         run : |
